erDiagram
    raffle_activity {
        bigint id PK "AUTO_INCREMENT"
        bigint activity_id "活动ID"
        varchar_64 activity_name "活动名称"
        bigint strategy_id "抽奖策略ID"
    }

    raffle_activity_sku {
        int id PK "AUTO_INCREMENT"
        bigint sku "商品SKU编号"
        bigint activity_id FK "活动ID"
        int stock_count "商品总库存"
        int stock_count_surplus "剩余库存"
    }

    raffle_activity_order_000 {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint sku FK "商品SKU"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "订单ID"
        datetime order_time "下单时间"
        int total_count "获得总次数"
        int day_count "获得日次数"
        int month_count "获得月次数"
        varchar_16 state "complete"
        varchar_64 out_business_no "业务防重ID"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_order_001 {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint sku FK "商品SKU"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "订单ID"
        datetime order_time "下单时间"
        int total_count "获得总次数"
        int day_count "获得日次数"
        int month_count "获得月次数"
        varchar_16 state "complete"
        varchar_64 out_business_no "业务防重ID"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_order_002 {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint sku FK "商品SKU"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "订单ID"
        datetime order_time "下单时间"
        int total_count "获得总次数"
        int day_count "获得日次数"
        int month_count "获得月次数"
        varchar_16 state "complete"
        varchar_64 out_business_no "业务防重ID"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_order_003 {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint sku FK "商品SKU"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "订单ID"
        datetime order_time "下单时间"
        int total_count "获得总次数"
        int day_count "获得日次数"
        int month_count "获得月次数"
        varchar_16 state "complete"
        varchar_64 out_business_no "业务防重ID"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_account {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        int total_count "总次数额度"
        int total_count_surplus "总次数剩余"
        int day_count "日次数额度"
        int day_count_surplus "日次数剩余"
        int month_count "月次数额度"
        int month_count_surplus "月次数剩余"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_account_day {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_10 day "yyyy-mm-dd"
        int day_count "当日次数额度"
        int day_count_surplus "当日次数剩余"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_account_month {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_7 month "yyyy-mm"
        int month_count "当月次数额度"
        int month_count_surplus "当月次数剩余"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    task {
        int id PK "AUTO_INCREMENT"
        varchar_32 topic "消息主题"
        varchar_512 message "消息主体"
        varchar_16 state "create/completed/fail"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_raffle_order_000 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "抽奖单ID"
        datetime order_time "抽奖发起时间"
        varchar_16 order_state "create/used/cancel"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_raffle_order_001 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "抽奖单ID"
        datetime order_time "抽奖发起时间"
        varchar_16 order_state "create/used/cancel"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_raffle_order_002 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "抽奖单ID"
        datetime order_time "抽奖发起时间"
        varchar_16 order_state "create/used/cancel"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_raffle_order_003 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "抽奖单ID"
        datetime order_time "抽奖发起时间"
        varchar_16 order_state "create/used/cancel"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_award_record_000 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id "活动ID"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id FK "抽奖单ID（一对一）"
        int award_id "奖品ID"
        varchar_128 award_title "奖品标题（冗余）"
        datetime award_time "中奖时间"
        varchar_16 award_state "create/completed"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_award_record_001 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id "活动ID"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id FK "抽奖单ID（一对一）"
        int award_id "奖品ID"
        varchar_128 award_title "奖品标题（冗余）"
        datetime award_time "中奖时间"
        varchar_16 award_state "create/completed"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_award_record_002 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id "活动ID"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id FK "抽奖单ID（一对一）"
        int award_id "奖品ID"
        varchar_128 award_title "奖品标题（冗余）"
        datetime award_time "中奖时间"
        varchar_16 award_state "create/completed"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_award_record_003 {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id "活动ID"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id FK "抽奖单ID（一对一）"
        int award_id "奖品ID"
        varchar_128 award_title "奖品标题（冗余）"
        datetime award_time "中奖时间"
        varchar_16 award_state "create/completed"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity ||--o{ raffle_activity_sku : "activity_id"
    raffle_activity_sku ||--o{ raffle_activity_order_000 : "sku"
    raffle_activity_sku ||--o{ raffle_activity_order_001 : "sku"
    raffle_activity_sku ||--o{ raffle_activity_order_002 : "sku"
    raffle_activity_sku ||--o{ raffle_activity_order_003 : "sku"
    raffle_activity ||--o{ raffle_activity_order_000 : "activity_id"
    raffle_activity ||--o{ raffle_activity_order_001 : "activity_id"
    raffle_activity ||--o{ raffle_activity_order_002 : "activity_id"
    raffle_activity ||--o{ raffle_activity_order_003 : "activity_id"
    raffle_activity ||--o{ raffle_activity_account : "activity_id"
    raffle_activity ||--o{ raffle_activity_account_day : "activity_id"
    raffle_activity ||--o{ raffle_activity_account_month : "activity_id"

    user_raffle_order_000 ||--o| user_award_record_000 : "order_id 一一对应"
    user_raffle_order_001 ||--o| user_award_record_001 : "order_id 一一对应"
    user_raffle_order_002 ||--o| user_award_record_002 : "order_id 一一对应"
    user_raffle_order_003 ||--o| user_award_record_003 : "order_id 一一对应"